--- a/src/templates/small-cardtpl.hbs
+++ b/src/templates/small-cardtpl.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
-<li>
-    <div class="image-container">
+<li class="poster-card">
+    <div class="poster-image-box">
         <img src="https://image.tmdb.org/t/p/original/{{poster_path}}" alt="Movie poster">
     </div>
     <h3 class="movie-title">{{title}}</h3>
