spener hidden, add some class

--- a/src/styles.css
+++ b/src/styles.css
@@ -297,7 +297,8 @@ body {
 .hideSearch,
 .hideBtn,
 .hideRate,
-.visibleFlag {
+.visibleFlag,
+.is-hidden {
   visibility: hidden;
 }
 /* .header-search::before {
