--- a/src/templates/small-cardtpl.hbs
+++ b/src/templates/small-cardtpl.hbs
@@ -1,11 +1,10 @@
 {{#each this}}
 <li class="poster-card">
     <div class="poster-image-box">
-        <img src="https://image.tmdb.org/t/p/original/{{poster_path}}" alt="Movie poster">
+        <img src="https://image.tmdb.org/t/p/w500/{{poster_path}}" alt="Movie poster" class="poster-image">
     </div>
-    <h3 class="movie-title">{{title}}</h3>
- 
-       {{#each genres}}<span>{{this}}</span> {{/each}}| {{release_date}}
+    <h3 class="poster-name">{{title}}</h3>
+    <p class="poster-description">{{#each genres}}<span>{{this}}</span> {{/each}}| {{release_date}}</p>
       
 </li>
 {{/each}}
