added the eventListeners to imgs of cards at gallery-creation.js

--- a/src/templates/movie-gallery.hbs
+++ b/src/templates/movie-gallery.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li class="poster-card">
     <div class="poster-image-box">
-        <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="movie poster" class="poster-image" />
+        <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="movie poster" class="poster-image" id="{{id}}"/>
     </div>
     <h3 class="poster-name">{{original_title}}</h3>
     <div class="poster-description-info">
