--- a/src/templates/big-cardtpl.hbs
+++ b/src/templates/big-cardtpl.hbs
@@ -1,9 +1,11 @@
+{{#each this}}
 <div>
-    <div class="image-container">
-        <img src="{{img}}" alt="{{img_description}}">
+    {{!-- <div class="image-container"> --}}
+    <div class="poster-image-box">
+        <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="Movie poster" class="poster-image"">
     </div>
-    <h3 class="movie-title">{{MovieTitle}}</h3>
-    <ul class="movie-properties-list">
+    <h3 class="movie-title">{{original_title}}</h3>
+    {{!-- <ul class="movie-properties-list">
         <li class="movie-properties-item">
            <span>Vote/Votes</span> <span>{{rate}}/{{votes}}</span>
         </li>
@@ -16,5 +18,6 @@
         <li class="movie-properties-item">
            <span>Genre</span> <span>{{genre}}</span>
         </li>
-    </ul>
+    </ul> --}}
 </div>
+{{/each}}
