--- a/src/templates/movie-details.hbs
+++ b/src/templates/movie-details.hbs
@@ -1,4 +1,4 @@
-{{#each results}}
+{{#each this}}
 <li class="result-details">
   <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="" class="result-detail-img" />
   <div class="result-movie-info-card">
