local storage logic on a detailed card

--- a/src/templates/movie-details.hbs
+++ b/src/templates/movie-details.hbs
@@ -25,10 +25,10 @@
     <p class="result-about">about</p>
     <p class="result-overview">{{overview}}</p>
     <div class="detailsBtn">
-      <button class="details-button add-to-watch-button">
+      <button class="details-button add-to-watch-button" data-action="add-to-watched">
         add to watched
       </button>
-      <button class="details-button add-to-queue-button">
+      <button class="details-button add-to-queue-button" data-action="add-to-queue">
         add to queue
       </button>
     </div>
