--- a/src/styles.css
+++ b/src/styles.css
@@ -467,7 +467,15 @@ p {
 }
 
 /* Menu list  */
+.header-logo:hover,
+.header-logo:focus,
+.header-logo:visited {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
 .header-menu {
+  width: 151px;
   display: flex;
   justify-content: space-between;
   list-style: none;
@@ -483,13 +491,17 @@ p {
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   line-height: 1.333;
-  width: 78px;
+  /* width: 78px; */
   display: inline-flex;
 }
 .menu-list-name:hover,
-.menu-list-name:focus {
+.menu-list-name:focus,
+.menu-list-name:visited {
   border-bottom: 1px solid var(--orange);
+  text-decoration: none;
+  color: rgb(255, 255, 255);
 }
+
 /* Search header block */
 .search {
   display: flex;
@@ -753,7 +765,6 @@ library-gallery {
   font-weight: 500;
   text-transform: uppercase;
   line-height: 1.4;
-  height: 45px;
 }
 .result-movie-param {
   height: 120px;
@@ -838,10 +849,6 @@ library-gallery {
   flex-wrap: wrap;
   margin: auto;
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> dev
 
 .add-to-watch-button,
 .add-to-queue-button {
