--- a/src/templates/small-cardtpl.hbs
+++ b/src/templates/small-cardtpl.hbs
@@ -1,7 +1,11 @@
 {{#each this}}
 <li class="poster-card">
     <div class="poster-image-box">
+        {{#if poster_path}}
         <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="Movie poster" class="poster-image" id="{{id}}">
+        {{else}}
+        <img src="https://www.indulgemassager.com/assets/frontend/indulge/images/no-profile-pic.jpg" alt="Movie poster" class="poster-image" id="{{id}}">
+        {{/if}}
     </div>
     <h3 class="poster-name">{{title}}</h3>
     <p class="poster-description">{{#each genres}}<span>{{this}}</span> {{/each}}| {{release_date}}</p>
