--- a/src/templates/small-cardtpl.hbs
+++ b/src/templates/small-cardtpl.hbs
@@ -8,7 +8,8 @@
         {{/if}}
     </div>
     <h3 class="poster-name">{{title}}</h3>
-    <p class="poster-description">{{#each genres}}<span>{{this}}</span> {{/each}}| {{release_date}}</p>
+    <p class="poster-description">{{#each genres}}<span>{{this}}</span> {{/each}}| {{release_date}} <span class="result-rating ">{{vote_average}}</span></p>
+    
       
 </li>
 {{/each}}
