Link to goit.ua added to footer. Corsor pointer added to poster-image-box in styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -187,6 +187,7 @@ p {
     margin-top: 15px;
   }
   .poster-image-box {
+    cursor: pointer;
     width: 272px;
     height: 403px;
     overflow: hidden;
