--- a/src/templates/small-cardtpl.hbs
+++ b/src/templates/small-cardtpl.hbs
@@ -4,7 +4,13 @@
         <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="Movie poster" class="poster-image" id="{{id}}">
     </div>
     <h3 class="poster-name">{{title}}</h3>
-    <p class="poster-description">{{#each genres}}<span>{{this}}</span> {{/each}}| {{release_date}}</p>
+    <p class="poster-description">{{#each genres}}<span class ="movie-genre">{{this}}</span> {{/each}}| {{year_relaese}} <span class="result-rating ">{{vote_average}}</span> 
+    
+        
+    
+    </p>
+    {{!-- <p class="result-vote-value"> --}}
+        {{!-- </p> --}}
       
 </li>
 {{/each}}
