fix year and genre

--- a/src/templates/small-cardtpl.hbs
+++ b/src/templates/small-cardtpl.hbs
@@ -4,7 +4,7 @@
         <img src="https://image.tmdb.org/t/p/original{{poster_path}}" alt="Movie poster" class="poster-image" id="{{id}}">
     </div>
     <h3 class="poster-name">{{title}}</h3>
-    <p class="poster-description">{{#each genres}}<span class ="movie-genre">{{this}}</span> {{/each}}| {{year_relaese}} <span class="result-rating ">{{vote_average}}</span> 
+    <p class="poster-description">{{#each genres}}<span>{{this}} </span> {{/each}}| <span>{{year_relaese}}</span> <span class="result-rating ">{{vote_average}}</span> 
     
         
     
