--- a/src/styles.css
+++ b/src/styles.css
@@ -234,7 +234,8 @@ p {
   .result-details {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
