changed styles.css and details.hbs to correct virew of picture in details.

--- a/src/styles.css
+++ b/src/styles.css
@@ -234,7 +234,9 @@ p {
   .result-details {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
+   
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
